# sprcnn

./: README.md  config.py  evaluate.py  options.py  requirements.txt  train_planercnn.py  utils.py
datasets/: scenenet_rgbd_dataset.py  scenenet_rgbd_scene.py  scenenet_rgbd_stereo_dataset.py
models/: model.py
utils_cpp/: CMakeLists.txt  setup.py  utilsCppPy.cpp
